--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -4,142 +4,156 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".ui.auth.LoginActivity">
+    android:scrollbarThumbVertical="@null"
+    tools:context=".ui.auth.login.LoginActivity">
 
-    <androidx.constraintlayout.widget.ConstraintLayout
+    <FrameLayout
         android:layout_width="match_parent"
-        android:layout_height="wrap_content" >
+        android:layout_height="wrap_content">
 
-        <!--IMAGE COVER-->
-        <ImageView
-            android:id="@+id/img_cover"
+        <!--LOGIN LAYOUT-->
+        <androidx.constraintlayout.widget.ConstraintLayout
             android:layout_width="match_parent"
-            android:layout_height="230dp"
-            android:layout_marginTop="32dp"
-            android:layout_marginHorizontal="36dp"
-            android:src="@drawable/bg_login"
-            android:alpha="0"
-            tools:alpha="1"
-            app:layout_constraintTop_toTopOf="parent" />
+            android:layout_height="wrap_content" >
 
-        <!--SIGN UP TITLE-->
-        <TextView
-            android:id="@+id/tv_title"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_marginTop="32dp"
-            android:layout_marginHorizontal="36dp"
-            android:text="Login"
-            android:textSize="24sp"
-            android:textStyle="bold"
-            android:alpha="0"
-            tools:alpha="1"
-            app:layout_constraintTop_toBottomOf="@id/img_cover" />
+            <!--IMAGE COVER-->
+            <ImageView
+                android:id="@+id/img_cover"
+                android:layout_width="match_parent"
+                android:layout_height="230dp"
+                android:layout_marginTop="32dp"
+                android:layout_marginHorizontal="36dp"
+                android:src="@drawable/bg_login"
+                android:alpha="0"
+                tools:alpha="1"
+                app:layout_constraintTop_toTopOf="parent" />
 
-        <!--SUBTITLE-->
-        <TextView
-            android:id="@+id/tv_subtitle"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_marginHorizontal="36dp"
-            android:text="To explore healthy foods with us!"
-            android:textSize="16sp"
-            android:alpha="0"
-            tools:alpha="1"
-            app:layout_constraintTop_toBottomOf="@id/tv_title" />
-
-        <!--EMAIL FIELD-->
-        <com.google.android.material.textfield.TextInputLayout
-            android:id="@+id/edtl_email"
-            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_marginTop="32dp"
-            android:layout_marginHorizontal="36dp"
-            android:alpha="0"
-            android:hint="Email"
-            app:startIconDrawable="@drawable/ic_email"
-            app:boxCornerRadiusBottomEnd="20dp"
-            app:boxCornerRadiusBottomStart="20dp"
-            app:boxCornerRadiusTopEnd="20dp"
-            app:boxCornerRadiusTopStart="20dp"
-            app:layout_constraintTop_toBottomOf="@+id/tv_subtitle"
-            tools:alpha="1">
-
-            <com.google.android.material.textfield.TextInputEditText
-                android:id="@+id/edt_email"
+            <!--SIGN UP TITLE-->
+            <TextView
+                android:id="@+id/tv_title"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
+                android:layout_marginTop="32dp"
+                android:layout_marginHorizontal="36dp"
+                android:text="Login"
+                android:textSize="24sp"
+                android:textStyle="bold"
                 android:alpha="0"
-                android:inputType="textEmailAddress"
-                tools:alpha="1" />
+                tools:alpha="1"
+                app:layout_constraintTop_toBottomOf="@id/img_cover" />
 
-        </com.google.android.material.textfield.TextInputLayout>
-
-        <!--PASSWORD FIELD-->
-        <com.google.android.material.textfield.TextInputLayout
-            android:id="@+id/edtl_password"
-            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_marginHorizontal="36dp"
-            android:layout_marginTop="18dp"
-            android:alpha="0"
-            android:hint="Password"
-            app:startIconDrawable="@drawable/ic_password"
-            app:endIconMode="password_toggle"
-            app:boxCornerRadiusBottomEnd="20dp"
-            app:boxCornerRadiusBottomStart="20dp"
-            app:boxCornerRadiusTopEnd="20dp"
-            app:boxCornerRadiusTopStart="20dp"
-            app:layout_constraintTop_toBottomOf="@+id/edtl_email"
-            tools:alpha="1">
-
-            <com.google.android.material.textfield.TextInputEditText
-                android:id="@+id/edt_password"
+            <!--SUBTITLE-->
+            <TextView
+                android:id="@+id/tv_subtitle"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:inputType="textPassword"
+                android:layout_marginHorizontal="36dp"
+                android:text="To explore healthy foods with us!"
+                android:textSize="16sp"
                 android:alpha="0"
-                tools:alpha="1" />
+                tools:alpha="1"
+                app:layout_constraintTop_toBottomOf="@id/tv_title" />
 
-        </com.google.android.material.textfield.TextInputLayout>
+            <!--EMAIL FIELD-->
+            <com.google.android.material.textfield.TextInputLayout
+                android:id="@+id/edtl_email"
+                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="32dp"
+                android:layout_marginHorizontal="36dp"
+                android:alpha="0"
+                android:hint="Email"
+                app:startIconDrawable="@drawable/ic_email"
+                app:boxCornerRadiusBottomEnd="20dp"
+                app:boxCornerRadiusBottomStart="20dp"
+                app:boxCornerRadiusTopEnd="20dp"
+                app:boxCornerRadiusTopStart="20dp"
+                app:layout_constraintTop_toBottomOf="@+id/tv_subtitle"
+                tools:alpha="1">
 
-        <!--BUTTON LOGIN-->
-        <androidx.appcompat.widget.AppCompatButton
-            android:id="@+id/btn_login"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_marginHorizontal="36dp"
-            android:layout_marginTop="32dp"
-            android:text="Login"
-            android:textSize="16sp"
-            android:textStyle="bold"
-            android:textColor="@color/white"
-            android:background="@drawable/bg_button_filled"
-            android:alpha="0"
-            tools:alpha="1"
-            app:layout_constraintTop_toBottomOf="@+id/edtl_password" />
+                <com.google.android.material.textfield.TextInputEditText
+                    android:id="@+id/edt_email"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:alpha="0"
+                    android:inputType="textEmailAddress"
+                    tools:alpha="1" />
 
-        <!--BUTTON SIGN UP-->
-        <androidx.appcompat.widget.AppCompatButton
-            android:id="@+id/btn_signup"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_marginHorizontal="36dp"
-            android:layout_marginTop="18dp"
-            android:layout_marginBottom="32dp"
-            android:alpha="0"
-            android:background="@drawable/bg_button_stroke"
-            android:text="Sign Up"
-            android:textColor="@color/my_green"
-            android:textSize="16sp"
-            android:textStyle="bold"
-            app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/btn_login"
-            tools:alpha="1"
-            tools:layout_editor_absoluteX="24dp" />
+            </com.google.android.material.textfield.TextInputLayout>
 
-    </androidx.constraintlayout.widget.ConstraintLayout>
+            <!--PASSWORD FIELD-->
+            <com.google.android.material.textfield.TextInputLayout
+                android:id="@+id/edtl_password"
+                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginHorizontal="36dp"
+                android:layout_marginTop="18dp"
+                android:alpha="0"
+                android:hint="Password"
+                app:startIconDrawable="@drawable/ic_password"
+                app:endIconMode="password_toggle"
+                app:boxCornerRadiusBottomEnd="20dp"
+                app:boxCornerRadiusBottomStart="20dp"
+                app:boxCornerRadiusTopEnd="20dp"
+                app:boxCornerRadiusTopStart="20dp"
+                app:layout_constraintTop_toBottomOf="@+id/edtl_email"
+                tools:alpha="1">
+
+                <com.google.android.material.textfield.TextInputEditText
+                    android:id="@+id/edt_password"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:inputType="textPassword"
+                    android:alpha="0"
+                    tools:alpha="1" />
+
+            </com.google.android.material.textfield.TextInputLayout>
+
+            <!--BUTTON LOGIN-->
+            <androidx.appcompat.widget.AppCompatButton
+                android:id="@+id/btn_login"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginHorizontal="36dp"
+                android:layout_marginTop="32dp"
+                android:text="Login"
+                android:textSize="16sp"
+                android:textStyle="bold"
+                android:textColor="@color/white"
+                android:background="@drawable/bg_button_filled"
+                android:alpha="0"
+                tools:alpha="1"
+                app:layout_constraintTop_toBottomOf="@+id/edtl_password" />
+
+            <!--BUTTON SIGN UP-->
+            <androidx.appcompat.widget.AppCompatButton
+                android:id="@+id/btn_signup"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginHorizontal="36dp"
+                android:layout_marginTop="18dp"
+                android:layout_marginBottom="32dp"
+                android:alpha="0"
+                android:background="@drawable/bg_button_stroke"
+                android:text="Sign Up"
+                android:textColor="@color/my_green"
+                android:textSize="16sp"
+                android:textStyle="bold"
+                app:layout_constraintBottom_toBottomOf="parent"
+                app:layout_constraintTop_toBottomOf="@+id/btn_login"
+                tools:alpha="1"
+                tools:layout_editor_absoluteX="24dp" />
+
+        </androidx.constraintlayout.widget.ConstraintLayout>
+
+        <!--LOADING LAYOUT-->
+        <include
+            layout="@layout/loading_layout"
+            android:id="@+id/loading_layout"
+            android:visibility="gone" />
+
+    </FrameLayout>
 
 </ScrollView>
